--- a/nuitka/tools/specialize/templates/HelperSlotsStr.c.j2
+++ b/nuitka/tools/specialize/templates/HelperSlotsStr.c.j2
@@ -17,24 +17,24 @@
 {#                                                                              #}
 {% from 'HelperSlotsCommon.c.j2' import goto_exit %}
 
-{% macro tuple_slot(props, operator, nb_slot, target, left, right, result, operand1, operand2, exit_result_ok, exit_result_exception) %}
+{% macro str_slot(props, operator, nb_slot, target, left, right, result, operand1, operand2, exit_result_ok, exit_result_exception) %}
     // Not every code path will make use of all possible results.
     NUITKA_MAY_BE_UNUSED PyObject *obj_result;
 
     {# TODO: Could and should in-line and specialize this per slot too. #}
 {% if nb_slot == "nb_add" %}
-{% if left.type_name == "tuple" == right.type_name %}
-    PyObject *x = TUPLE_CONCAT({{ operand1 }}, {{ operand2 }});
-{% else %}
-    PyObject *x = {{left.getSlotCallExpression("sq_concat", "PyTuple_Type.tp_as_sequence->sq_concat", operand1, operand2)}};
-{% endif %}
+    PyObject *x = {{left.getSlotCallExpression("sq_concat", "PyString_Type.tp_as_sequence->sq_concat", operand1, operand2)}};
+    assert(x != Py_NotImplemented);
 {% elif nb_slot == "nb_multiply" %}
-    PyObject *x = {{left.getSlotCallExpression("sq_repeat", "PyTuple_Type.tp_as_sequence->sq_repeat", operand1, operand2)}};
+    PyObject *x = {{left.getSlotCallExpression("sq_repeat", "PyString_Type.tp_as_sequence->sq_repeat", operand1, operand2)}};
+    assert(x != Py_NotImplemented);
+{% elif nb_slot == "nb_remainder" %}
+    PyObject *x = PyString_Format(operand1, operand2);
 {% else %}
-    PyObject *x = {{left.getSlotCallExpression(nb_slot, "PyTuple_Type.tp_as_number->" + nb_slot, operand1, operand2)}};
+    PyObject *x = {{left.getSlotCallExpression(nb_slot, "PyString_Type.tp_as_number->" + nb_slot, operand1, operand2)}};
+    assert(x != Py_NotImplemented);
 {% endif %}
 
-    assert(x != Py_NotImplemented);
     {{ goto_exit(props, "exit_result_object", "x") }}
 
 exit_result_object:
@@ -50,7 +50,6 @@ exit_result_object:
 
     {{ operand1 }} = obj_result;
     Py_INCREF(obj_result);
-
 {% endif %}
     {{ goto_exit(props, exit_result_ok) }}
 
