Optimization: Use direct code for all binary in-place operations but "*" and "+"
* The later need more work for in-place sequence concat and in-place
  repeat to be supported.

* This doesn't yet use all possible optimization.

--- a/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
@@ -136,7 +136,7 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
     }
 {% endif %}
 
-{% if operator in "&" and False %}
+{% if operator in ("&", "|", "^", "<<", ">>", "/", "//", "-", "@", "**", "%") %}
 #ifdef _MSC_VER
 #pragma warning(push)
 #pragma warning(disable : 4101)
